--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: "Deploy"
 on:
   pull_request:
+      branches: [ master ]
   push:
+      branches: [ master ]
 jobs:
-  tests:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
