--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v10
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        nix_path: nixpkgs=nixpkgs=https://github.com/nixos/nixpkgs/archive/6405edf2dca7f6faaa29266136dfa7f8f969b511.tar.gz
     - run: cd mine-site && nix-build && ./result/bin/site build
 
     - name: Deploy
